--- a/Schmeelk_Final_Quantative_Sprint/index.html
+++ b/Schmeelk_Final_Quantative_Sprint/index.html
@@ -1,13 +1,23 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="./p5.min.js"></script>
-    <script src="./addons/p5.dom.min.js"></script>
-    <script src="./addons/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
-  </head>
-  <body>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <script language="javascript" type="text/javascript" src="./libraries/p5.js"></script>
+  <!-- uncomment lines below to include extra p5 libraries -->
+  <script language="javascript" src="./libraries/p5.dom.js"></script>
+  <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
+  <script language="javascript" type="text/javascript" src="./sketch.js"></script>
+  <!-- this line removes any default padding and style. you might only need one of these values set. -->
+  <style> 
+  body {padding: 0; margin: 0;
+  	font-family:sans-serif;
+  } 
+  .highlight{
+  	background-color:yellow;
+  }
+  </style>
+</head>
+
+<body>
+</body>
 </html>
+
