--- a/index.html
+++ b/index.html
@@ -30,9 +30,36 @@ Museum of Art in Manhattan, New York, during the German Renaissance with
  the focus on Albrecht D&uuml;rer.  The sprint juxtaposes Wikipedia data, 
 along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art.  </p>
+
+<h2> D&uuml;ring In the Met  </h2>
+<br>
+<br>
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
+   <img style="border:0;width:400px;height:200px" src="./Durer_Story/durerstory-artboard.png" alt="Qualitative Study"></a>
+
+<br>
+<p> This is an interactive story timeline for Albrecht D&uuml;rer with his
+artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, 
+along with The Met public domain images that transpire for the object 
+create dates of Albrecht D&uuml;rer's works of art in The Met.  </p>
+
+
+<h2> About Our Class at Parsons  </h2>
+<br>
+<br>
+<a href="https://www.newschool.edu/parsons/ms-data-visualization/">
+   <img style="border:0;width:400px;height:200px" src="./PGDV5200_MetVisit_2018.jpg" alt="Parsons School of Design"></a>
+
+<br>
+
+<p> PGDV 5200 Was taught by Richard The (<a href="https://www.linkedin.com/in/richardthe" >linkedin </a>, <a href="http://www.richardthe.com/" >website</a>) </p>
+
+<p> "Parsons’ Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today’s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.
+
+This program is part of Parsons' School of Art, Media, and Technology (AMT). Learn about the AMT community and explore our blog to see what students, faculty, and alumni are doing in NYC and around the world."  </p>
+
+
+
 </center>
-
-
- 
 
 </body></html>
