--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ Museum of Art in Manhattan, New York, during the German Renaissance with
 along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art.  </p>
 
-<h2> D&uuml;ring In the Met  </h2>
+<h2> D&uuml;rer In the Met  </h2>
 <br>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
-   <img style="border:0;width:400px;height:200px" src="./Durer_Story/durerstory-artboard.png" alt="Qualitative Study"></a>
+   <img style="border:0;width:400px;height:200px" src="./Durer_Story/durerstory-artboard.png" alt="Interactive Story"></a>
 
 <br>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
 artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, 
 along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art in The Met.  </p>
+create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/durerstory-artboard.png"> art board </a>  </p>
 
 
 <h2> About Our Class at Parsons  </h2>
