--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 
 <p> PGDV 5200 Taught by Richard The (<a href="https://www.linkedin.com/in/richardthe" >linkedin </a>, <a href="http://www.richardthe.com/" >website</a>) </p>
 
-<p> "Parsons&#39; Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today&#39;s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.
-
-This program is part of Parsons' School of Art, Media, and Technology (AMT). Learn about the AMT community and explore our blog to see what students, faculty, and alumni are doing in NYC and around the world."  </p>
+<p> "Parsons&#39; Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today&#39;s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.  This program is part of Parsons' School of Art, Media, and Technology (AMT)."  </p>
 
 
 
