--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ along with The Met public domain images that transpire for the object
 create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/durerstory-artboard.png"> art board </a>  </p>
 
 
-<h2> About Our Class at Parsons  </h2>
+<h2> About Our Class @ Parsons  </h2>
 <br>
 <br>
 <a href="https://www.newschool.edu/parsons/ms-data-visualization/">
-   <img style="border:0;width:400px;height:300px" src="./PGDV5200_MetVisit_2018.jpg" alt="Parsons School of Design"></a>
+   <img style="border:0;width:400px;height:275px" src="./PGDV5200_MetVisit_2018.jpg" alt="Parsons School of Design"></a>
 
 <br>
 
