--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Museum of Art in Manhattan, New York, during the German Renaissance with
 along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art.  </p>
 
-<h2> D&uuml;rer In the Met  </h2>
+<h2> D&uuml;rer's Story In the Met  </h2>
 <br>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
