--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<center> <h1>Met D&uuml;rer Visualizations by Dr. Suzanna Schmeelk</h1> 
+<center> <h1>Met D&uuml;rer Visualizations by Suzanna Schmeelk</h1> 
 <h2> Albrecht D&uuml;rer @ the Met </h2>
 <br>
 <br>
