Index Update of Pictures

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <br>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
-   <img style="border:0;width:400px;height:200px" src="./Durer_Story/durerstory-artboard.png" alt="Interactive Story"></a>
+   <img style="border:0;width:400px;height:200px" src="./ds.png" alt="Interactive Story"></a>
 
 <br>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
 artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, 
 along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/durerstory-artboard.png"> art board </a>  </p>
+create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018"> art board </a>  </p>
 
 
 <h2> About Our Class @ Parsons  </h2>
