--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@ artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint ju
 along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018"> art board </a>  </p>
 
+<h2> Where is D&uuml;rer's In the Met?  </h2>
+<br>
+<br>
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/WhereIsDurerInTheMet.pdf">
+   <img style="border:0;width:400px;height:200px" src="./dm.png" alt="Interactive Story"></a>
+
+<br>
+<p> This is an interactive mobile application for Met visitors and scholars to discover where
+D&uuml;rer art pieces are in the Met as well as a story timeline for Albrecht D&uuml;rer.  
+The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
+create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
+
+
+
 
 <h2> About Our Class @ Parsons  </h2>
 <br>
@@ -53,7 +67,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 <br>
 
 <p> PGDV 5200 Taught by Richard The (<a href="https://www.linkedin.com/in/richardthe" >linkedin</a>, <a href="http://www.richardthe.com/" >website</a>) </p>
-<p> Students (<a href="https://www.linkedin.com/in/richardthe" >name</a>, <a href="http://www.richardthe.com/" >name</a>) </p>
+<p> Students (<a href="https://www.linkedin.com/in/richardthe" >Ryan Best</a>, <a href="http://www.richardthe.com/" >Emily Chu</a>, <a href="http://www.richardthe.com/" >Clare Churchouse</a>, <a href="http://www.richardthe.com/" >Colleen Mccaffrey</a>, <a href="http://www.richardthe.com/" >TA: Flavio Sant'anna</a>) </p>
 
 <p> "Parsons&#39; Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today&#39;s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.  This program is part of Parsons' School of Art, Media, and Technology (AMT)."  </p>
 
