--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <h2> D&uuml;rer's Story In the Met  </h2>
 <br>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
+<a href="ec2-18-218-31-2.us-east-2.compute.amazonaws.com/Class05032018/">
    <img style="border:0;width:400px;height:200px" src="./ds.png" alt="Interactive Story"></a>
 
 <br>
@@ -46,7 +46,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 <h2> Where is D&uuml;rer's In the Met?  </h2>
 <br>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/WhereIsDurerInTheMet.pdf">
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour.pdf">
    <img style="border:0;width:200px;height:400px" src="./dm.png" alt="Interactive Story"></a>
 
 <br>
