--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html><html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252">
-<title>D&uuml;rer Story</title> 
+
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+
+	<title>D&uuml;rer Story</title> 
 
 <link rel="stylesheet" href="./css/durer.css">
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic|Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" href="./css/normalize.css" type="text/css">
 <link rel="stylesheet" href="./css/style.css" type="text/css">
