--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><html>
 <head>
-
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta http-equiv="Content-Type" content="text/html; charset="ISO-8859-1"> 
 
 	<title>D&uuml;rer Story</title> 
 
