--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"> 
 
+        <meta charset="UTF-8"> 
 	<title>D&uuml;rer Story</title> 
 
 <link rel="stylesheet" href="./css/durer.css">
