--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html>
 <head>
 
-        <meta charset="UTF-8"> 
-	<title>D&uuml;rer Story</title> 
+<meta http-equiv="content-type" content="text/html; charset=windows-1252">
+<title>D&uuml;rer Story</title> 
 
 <link rel="stylesheet" href="./css/durer.css">
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
@@ -1829,7 +1829,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <td> <a href="http://www.metmuseum.org/art/collection/search/391247" target="_blank"> <img style="border:0;width="115" height="177"" src="./images/DP815764.jpg" alt="Interactive Story"></a></td> 
 <td> <a href="http://www.metmuseum.org/art/collection/search/391256" target="_blank"> <img style="border:0;width="137" height="177"" src="./images/DP815743.jpg" alt="Interactive Story"></a></td> 
 </tr>
-<tr> <td valign="middle"> Saints </td> <td valign="middle"> Saints </td> <td valign="middle"> Saints </td> <td valign="middle"> Portrait </td> </tr>
+<tr> <td valign="middle"> Saints </td> <td valign="middle"> Saints </td> <td valign="middle"> Saints </td> <td valign="middle"> Melencolia I </td> </tr>
 </table><br><br>
 <table >
 <tr>
@@ -2137,3 +2137,4 @@ $(document).on("click", "a[href^='#']", function (e) {
 <a id="bottom"></a>
 </center> 
  </body></html> 
+
