Durer Story Fixed Accents

--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -1337,7 +1337,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <td> <a href="http://www.metmuseum.org/art/collection/search/391399" target="_blank"> <img style="border:0;width="115" height="177"" src="./images/DP815558.jpg" alt="Interactive Story"></a></td> 
 </tr>
 <tr> <td valign="middle"><div class="tooltip"> The Passion <span class="tooltiptext">Series</span></td> <td valign="middle"><div class="tooltip"> The Passion <span class="tooltiptext">Series</span></td> <td valign="middle"><div class="tooltip"> The Passion <span class="tooltiptext">Series</span></td> <td valign="middle"><div class="tooltip"> The Passion <span class="tooltiptext">Series</span></td> </tr>
-<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: D&uuml;rer created large numbers of preparatory drawings, especially for his paintings and engravings, and many survive, most famously the Betende Hände (Praying Hands) from circa 1508, a study for an apostle in the Heller altarpiece.</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: Maximilian I, Holy Roman Emperor, is defeated in Friulia by Venetian forces; he is forced to sign a 3-year truce, and cede several territories to the Republic.</world><br> </td> </tr></table><br><br>
+<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: D&uuml;rer created large numbers of preparatory drawings, especially for his paintings and engravings, and many survive, most famously the Betende H&#228;nde (Praying Hands) from circa 1508, a study for an apostle in the Heller altarpiece.</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: Maximilian I, Holy Roman Emperor, is defeated in Friulia by Venetian forces; he is forced to sign a 3-year truce, and cede several territories to the Republic.</world><br> </td> </tr></table><br><br>
 <br><br>
 <a id="y1509"></a><br></p>
 <p> <hr> <br> <h2> 1509 </h2> <br>
@@ -2004,7 +2004,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <td> <a href="http://www.metmuseum.org/art/collection/search/391343" target="_blank"> <img style="border:0;width="127" height="177"" src="./images/DP815986.jpg" alt="Interactive Story"></a></td> 
 </tr>
 <tr> <td valign="middle"> Christianity </td> <td valign="middle"> Christianity </td> <td valign="middle"> Christianity </td> <td valign="middle"> Christianity </td> </tr>
-<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: In the summer of 1520 D&uuml;rer made his fourth and last major journey.</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: King Christian II of Denmark and Norway defeats the Swedes, at Lake Åsunden in Sweden. The Swedish regent Sten Sture the Younger is mortally wounded in the battle. He is rushed towards Stockholm, in order to lead the fight against the Danes from there, but dies from his wounds on February 3.</world><br> </td> </tr></table><br><br>
+<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: In the summer of 1520 D&uuml;rer made his fourth and last major journey.</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: King Christian II of Denmark and Norway defeats the Swedes, at Lake &#192;sunden in Sweden. The Swedish regent Sten Sture the Younger is mortally wounded in the battle. He is rushed towards Stockholm, in order to lead the fight against the Danes from there, but dies from his wounds on February 3.</world><br> </td> </tr></table><br><br>
 </Coologne> 
 </section>
 <Antwerp> 
@@ -2029,7 +2029,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <td> <a href="http://www.metmuseum.org/art/collection/search/391282" target="_blank"> <img style="border:0;width="111" height="177"" src="./images/DP815926.jpg" alt="Interactive Story"></a></td> 
 <td></td></tr>
 <tr> <td valign="middle"> Saints </td> <td valign="middle"> Saints </td> <td valign="middle"> Saints </td> <td> </td> </tr>
-<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: On his return to Nuremberg, D&uuml;rer worked on a number of grand projects with religious themes, including a crucifixion scene and a Sacra Conversazione, though neither was completed.[20] This may have been due in part to his declining health, but perhaps also because of the time he gave to the preparation of his theoretical works on geometry and perspective, the proportions of men and horses, and fortification.</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: Fall of Tenochtitlan: Cuauhtémoc surrenders to Cortés, thus incorporating the Aztec Empire into the Spanish Empire.</world><br> </td> </tr></table><br><br>
+<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: On his return to Nuremberg, D&uuml;rer worked on a number of grand projects with religious themes, including a crucifixion scene and a Sacra Conversazione, though neither was completed.[20] This may have been due in part to his declining health, but perhaps also because of the time he gave to the preparation of his theoretical works on geometry and perspective, the proportions of men and horses, and fortification.</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: Fall of Tenochtitlan: Cuauht&#233;moc surrenders to Cort&#233;s, thus incorporating the Aztec Empire into the Spanish Empire.</world><br> </td> </tr></table><br><br>
 </Antwerp> 
 </section>
 <Nuremberg> 
@@ -2119,7 +2119,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <td> <a href="http://www.metmuseum.org/art/collection/search/336657" target="_blank"> <img style="border:0;width="239" height="173"" src="./images/DP345232.jpg" alt="Interactive Story"></a></td> 
 <td></td><td></td><td></td></tr>
 <tr> <td valign="middle"> Book </td> <td> </td> <td> </td> <td> </td> </tr>
-<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: The other, a work on city fortifications, was published in 1527. "The Four Books on Human Proportion" were published posthumously, shortly after his death in 1528.[2]</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: The Narváez expedition to conquer Florida sets sail from Spain.</world><br> </td> </tr></table><br><br>
+<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: The other, a work on city fortifications, was published in 1527. "The Four Books on Human Proportion" were published posthumously, shortly after his death in 1528.[2]</life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: The Narv&#225;ez expedition to conquer Florida sets sail from Spain.</world><br> </td> </tr></table><br><br>
 <br><br>
 <a id="y1528"></a><br></p>
 <p> <hr> <br> <h2> 1528 </h2> <br>
@@ -2130,7 +2130,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <tr> <td valign="middle"> Roundel </td> <td> </td> <td> </td> <td> </td> </tr>
 </table><br><br>
 <table><tr><td> 
-<br><life> D&uuml;rer's Life: D&uuml;rer died in Nuremberg at the age of 56, leaving an estate valued at 6,874 florins&mdash;a considerable sum. His large house (purchased in 1509 from the heirs of the astronomer Bernhard Walther), where his workshop was located and where his widow lived until her death in 1539, remains a prominent Nuremberg landmark.[6] It is now a museum. He is buried in the Johannisfriedhof cemetery.  D&uuml;rer's work on human proportions is called the Four Books on Human Proportion (Vier Bücher von Menschlicher Proportion) of 1528.</life><br><br></table></tr></td> 
+<br><life> D&uuml;rer's Life: D&uuml;rer died in Nuremberg at the age of 56, leaving an estate valued at 6,874 florins&mdash;a considerable sum. His large house (purchased in 1509 from the heirs of the astronomer Bernhard Walther), where his workshop was located and where his widow lived until her death in 1539, remains a prominent Nuremberg landmark.[6] It is now a museum. He is buried in the Johannisfriedhof cemetery.  D&uuml;rer's work on human proportions is called the Four Books on Human Proportion (Vier B&#252;cher von Menschlicher Proportion) of 1528.</life><br><br></table></tr></td> 
 <table><tr><td> 
 <br><world> World History: (MDXXVIII) was a leap year starting on Wednesday (link will display the full calendar) of the Julian calendar.</world><br></table></tr></td> 
 
