Durer Story fixed &ndash;

--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -745,7 +745,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <td> <a href="http://www.metmuseum.org/art/collection/search/397058" target="_blank"> <img style="border:0;width="129" height="177"" src="./images/DP816737.jpg" alt="Interactive Story"></a></td> 
 <td></td></tr>
 <tr> <td valign="middle"> Saints </td> <td valign="middle"><div class="tooltip"> The Apocalypse <span class="tooltiptext">Series</span></td> <td valign="middle"><div class="tooltip"> The Apocalypse <span class="tooltiptext">Series</span></td> <td> </td> </tr>
-<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: In early 1492 D&uuml;rer travelled to Basel to stay with another brother of Martin Schongauer, the goldsmith Georg.[7] </life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: Casimir IV Jagiellon, of the Jagiellon Royal House, ends his reign (1427–1492).</world><br> </td> </tr></table><br><br>
+<tr> <td colspan="4"> <br><life> D&uuml;rer's Life: In early 1492 D&uuml;rer travelled to Basel to stay with another brother of Martin Schongauer, the goldsmith Georg.[7] </life><br><br> </td> </tr><tr> <td colspan="4"> <br><world> World History: Casimir IV Jagiellon, of the Jagiellon Royal House, ends his reign (1427&ndash;1492).</world><br> </td> </tr></table><br><br>
 <br><br>
 <a id="y1493"></a><br></p>
 <p> <hr> <br> <h2> 1493 </h2> <br>
