--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<center> <h1>Met D&uuml;rer Visualizations <br> by Suzanna Schmeelk</h1> 
 <h2> Albrecht D&uuml;rer @ the Met </h2>
 <br>
+<p> Albrecht D&uuml;rer's Artwork that is housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Quantative_Sprint_v2/index.html">
    <img style="border:0;width:200px;height:400px" src="./durer@themet.jpg" alt="Quantative Study"></a>
@@ -20,6 +21,7 @@ are housed in The Met based on the object create date. </p>
 
 <h2> D&uuml;ring German Renaissance @ the Met  </h2>
 <br>
+<p> Albrecht D&uuml;rer's Public Domain Artwork that is housed in the Metropolitan Museum of Art in Manhattan, New York, juxtaposed with other worldly insights. </p>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/index.html">
    <img style="border:0;width:400px;height:200px" src="./duringGermanRenaissance@themet.jpg" alt="Qualitative Study"></a>
@@ -33,14 +35,14 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 
 <h2> D&uuml;rer's Story In the Met  </h2>
 <br>
+<p> Albrecht D&uuml;rer's biography as indicated by his artwork housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
    <img style="border:0;width:400px;height:200px" src="./ds.png" alt="Interactive Story"></a>
 
 <br>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
-artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, 
-along with The Met public domain images that transpire for the object 
+artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018"> art board </a>  </p>
 
 <h2> Where is D&uuml;rer's In the Met?  </h2>
@@ -67,7 +69,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
 <br>
 
 <p> PGDV 5200 Taught by Richard The (<a href="https://www.linkedin.com/in/richardthe" >linkedin</a>, <a href="http://www.richardthe.com/" >website</a>) </p>
-<p> Students (<a href="https://www.linkedin.com/in/richardthe" >Ryan Best</a>, <a href="http://www.richardthe.com/" >Emily Chu</a>, <a href="http://www.richardthe.com/" >Clare Churchouse</a>, <a href="http://www.richardthe.com/" >Colleen Mccaffrey</a>, <a href="http://www.richardthe.com/" >TA: Flavio Sant'anna</a>) </p>
+<p> Students: <a href="http://www.richardthe.com/" >Clare Churchouse</a>,  <a href="http://www.richardthe.com/" >Emily Chu</a>, <a href="https://www.linkedin.com/in/richardthe" >Ryan Best</a>, <a href="https://www.linkedin.com/in/richardthe" >Richard The</a>, Jean, and Suzanna Schmeelk (not shown in photo <a href="http://www.richardthe.com/" >Colleen Mccaffrey</a>, <a href="http://www.richardthe.com/" >TA: Flavio Sant'anna</a>) </p>
 
 <p> "Parsons&#39; Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today&#39;s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.  This program is part of Parsons' School of Art, Media, and Technology (AMT)."  </p>
 
