Index div update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	<div class="box">
 	<center> <h1>Met D&uuml;rer Visualizations <br> by Suzanna Schmeelk</h1> 
 <h2> Albrecht D&uuml;rer @ the Met </h2>
 <br>
@@ -18,7 +19,9 @@
 The Metropolitan Museum of Art in Manhattan, New York.  The data 
 visualization juxtaposes D&uuml;rer's life along with what pieces of his art 
 are housed in The Met based on the object create date. </p>
+	</div>
 
+	<div class="box">
 <h2> D&uuml;ring German Renaissance @ the Met  </h2>
 <br>
 <p> Albrecht D&uuml;rer's Public Domain Artwork that is housed in the Metropolitan Museum of Art in Manhattan, New York, juxtaposed with other worldly insights. </p>
@@ -33,6 +36,9 @@ Museum of Art in Manhattan, New York, during the German Renaissance with
 along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art.  </p>
 
+	</div>
+
+	<div class="box">
 <h2> D&uuml;rer's Story In the Met  </h2>
 <br>
 <p> Albrecht D&uuml;rer's biography as indicated by his artwork housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
@@ -44,6 +50,7 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
 artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018"> art board </a>  </p>
+	</div>
 
 <h2> Where is D&uuml;rer's In the Met?  </h2>
 <br>
@@ -68,7 +75,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
 
 <br>
 
-<p> PGDV 5200 Taught by Richard The (<a href="https://www.linkedin.com/in/richardthe" >linkedin</a>, <a href="http://www.richardthe.com/" >website</a>) </p>
+<p> PGDV 5200 Taught by Richard The (<a href="https://www.linkedin.com/in/richardthe" target="_blank">linkedin</a>, <a href="http://www.richardthe.com/" target="_blank">website</a>) </p>
 <p> Students: <a href="http://www.richardthe.com/" target="_blank" >Clare Churchouse</a>,  <a href="http://www.richardthe.com/" target="_blank">Emily Chu</a>, <a href="https://ryanabest.github.io" target="_blank">Ryan Best</a>, <a href="https://www.linkedin.com/in/richardthe" target="_blank">Richard The</a>, Jean, and Suzanna Schmeelk (not shown in photo <a href="http://www.richardthe.com/" target="_blank">Colleen Mccaffrey</a>, <a href="https://snd2018.sched.com/santf655" target="_blank">TA: Flavio Sant'anna</a>) </p>
 
 <p> "Parsons&#39; Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today&#39;s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.  This program is part of Parsons' School of Art, Media, and Technology (AMT)."  </p>
