Index div update

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-	<div class="box">
 	<center> <h1>Met D&uuml;rer Visualizations <br> by Suzanna Schmeelk</h1> 
+	<div class="box">
 <h2> Albrecht D&uuml;rer @ the Met </h2>
 <br>
 <p> Albrecht D&uuml;rer's Artwork that is housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
@@ -52,6 +52,7 @@ artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint ju
 create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018"> art board </a>  </p>
 	</div>
 
+	<div class="box">
 <h2> Where is D&uuml;rer's In the Met?  </h2>
 <br>
 <br>
@@ -64,8 +65,10 @@ D&uuml;rer art pieces are in the Met as well as a story timeline for Albrecht D&
 The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
 create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
 
+	</div>
 
 
+	<div class="box">
 
 <h2> About Our Class @ Parsons  </h2>
 <br>
@@ -80,7 +83,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
 
 <p> "Parsons&#39; Master of Science in Data Visualization is a multidisciplinary program in which students develop skills bringing together visual design, computer science, statistical analysis, and ethical considerations of data analysis and representation. The presentation of data plays a critical role in the shaping of opinion, policy, and decision making in today&#39;s increasingly global society. Giving students a competitive edge as they enter the field, the MS program responds to the increased demand for experts who can turn data into insight.  This program is part of Parsons' School of Art, Media, and Technology (AMT)."  </p>
 
-
+	</div>
 
 </center>
 
