Update Albrecht D&uuml;rer's Index Page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <p> Albrecht D&uuml;rer's Artwork that is housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Quantative_Sprint_v2/index.html">
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Quantative_Sprint_v2/index.html" target="_blank">
    <img style="border:0;width:200px;height:400px" src="./durer@themet.jpg" alt="Quantative Study"></a>
 <br>
 <p> This is a quantative sprint representing Albrecht D&uuml;rer's works in 
@@ -26,7 +26,7 @@ are housed in The Met based on the object create date. </p>
 <br>
 <p> Albrecht D&uuml;rer's Public Domain Artwork that is housed in the Metropolitan Museum of Art in Manhattan, New York, juxtaposed with other worldly insights. </p>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/index.html">
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/index.html" target="_blank">
    <img style="border:0;width:400px;height:200px" src="./duringGermanRenaissance@themet.jpg" alt="Qualitative Study"></a>
 
 <br>
@@ -43,7 +43,7 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <br>
 <p> Albrecht D&uuml;rer's biography as indicated by his artwork housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html">
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/index.html" target="_blank">
    <img style="border:0;width:400px;height:200px" src="./ds.png" alt="Interactive Story"></a>
 
 <br>
@@ -56,7 +56,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 <h2> Where is D&uuml;rer's In the Met?  </h2>
 <br>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour.pdf">
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour.pdf" target="_blank">
    <img style="border:0;width:200px;height:400px" src="./dm.png" alt="Interactive Story"></a>
 
 <br>
@@ -73,7 +73,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
 <h2> About Our Class @ Parsons  </h2>
 <br>
 <br>
-<a href="https://www.newschool.edu/parsons/ms-data-visualization/">
+<a href="https://www.newschool.edu/parsons/ms-data-visualization/" target="_blank">
    <img style="border:0;width:400px;height:275px" src="./PGDV5200_MetVisit_2018.jpg" alt="Parsons School of Design"></a>
 
 <br>
