--- a/Durer_Story/index.html
+++ b/Durer_Story/index.html
@@ -147,7 +147,7 @@ $(document).on("click", "a[href^='#']", function (e) {
 <a id="top"></a>
 <br> <h1>Albrecht D&uuml;rer's Story in The Met</h1> 
 <hr> <hr><p> <br> <h2> 1471 </h2> <br> <br> <section> <Nuremberg> 
-<table><tr><td> 
+<table><tr><td align="left"> 
 <life> &#09; May 21 D&uuml;rer Born in Nuremberg, Germany. He was a painter, printmaker, and theorist of the German Renaissance. D&uuml;rer established his reputation and influence across Europe when he was still in his twenties due to his high-quality woodcut prints. He was in communication with the major Italian artists of his time, including Raphael, Giovanni Bellini and Leonardo da Vinci, and from 1512 he was patronized by emperor Maximilian I. D&uuml;rer is commemorated by both the Lutheran and Episcopal Churches. </life> </p> <br>
 </td></tr></table></p><hr><hr><br>
 <div class="sticky">Nuremberg</div> 
