Durer Index Update
Durer Main Index Update

--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <br>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
 artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018"> art board </a>  </p>
+create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/1.jpg"> art board 1 </a> <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/2.jpg"> art board 2 </a> </p>
 	</div>
 
 	<div class="box">
 <h2> Where is D&uuml;rer's In the Met?  </h2>
 <br>
+<p> This visualization is to guide people to Albrecht D&uuml;rer's artworks housed in the Metropolitan Museum of Art in Manhattan, New York. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/Durer_Mobile/WhereIsDurerInTheMet.pdf"> Art board 1 </a> </p>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour.pdf" target="_blank">
    <img style="border:0;width:200px;height:400px" src="./dm.png" alt="Interactive Story"></a>
