Update spacing main index

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <br>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
 artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/1.jpg"> art board 1 </a> <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/2.jpg"> art board 2 </a> </p>
+create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/1.jpg"> Art board 1 </a> &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/2.jpg"> Art board 2 </a> </p>
 	</div>
 
 	<div class="box">
