--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<center> <h1>Met D&uuml;rer Visualizations <br> by Suzanna Schmeelk</h1> 
+	<center> <h1>Met D&uuml;rer Visualizations <br> by <a href="http://www.suzannaschmeelk.com" target="_blank"> Suzanna Schmeelk</a> </h1> 
 	<div class="box">
 <h2> Albrecht D&uuml;rer @ the Met </h2>
 <br>
