Update Durer Mobile

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 <br>
 <p> This visualization is to guide people to Albrecht D&uuml;rer's artworks housed in the Metropolitan Museum of Art in Manhattan, New York. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/Durer_Mobile/WhereIsDurerInTheMet.pdf"> Art board 1 </a> </p>
 <br>
-<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour.pdf" target="_blank">
-   <img style="border:0;width:200px;height:400px" src="./dm.png" alt="Interactive Story"></a>
+<a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour2.pdf" target="_blank">
+   <img style="border:0;width:200px;height:400px" src="./dm.jpg" alt="Interactive Story"></a>
 
 <br>
 <p> This is an interactive mobile application for Met visitors and scholars to discover where
