--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p> This is a quantative sprint representing Albrecht D&uuml;rer's works in 
 The Metropolitan Museum of Art in Manhattan, New York.  The data 
 visualization juxtaposes D&uuml;rer's life along with what pieces of his art 
-are housed in The Met based on the object create date. </p>
+are housed in The Met based on the object create date. &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Quantative_Sprint_v2/Schmeelk_Final_Quantative_Sprint_v2.mp4" target="_blank">Video</a> </p>
 	</div>
 
 	<div class="box">
@@ -34,7 +34,7 @@ are housed in The Met based on the object create date. </p>
 Museum of Art in Manhattan, New York, during the German Renaissance with
  the focus on Albrecht D&uuml;rer.  The sprint juxtaposes Wikipedia data, 
 along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art.  </p>
+create dates of Albrecht D&uuml;rer's works of art.  &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/Schmeelk_Final_Qualitative_Sprint.mp4" target="_blank">Video</a> </p>
 
 	</div>
 
@@ -49,7 +49,7 @@ create dates of Albrecht D&uuml;rer's works of art.  </p>
 <br>
 <p> This is an interactive story timeline for Albrecht D&uuml;rer with his
 artwork in The Metropolitan Museum of Art in Manhattan, New York.  The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/1.jpg"> Art board 1 </a> &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/2.jpg"> Art board 2 </a> </p>
+create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/1.jpg"> Art board 1 </a> &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/RT_4_19_2018/2.jpg"> Art board 2 </a>   &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Story/Durer_Story.mp4" target="_blank">Video</a> </p>
 	</div>
 
 	<div class="box">
