--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ are housed in The Met based on the object create date. &nbsp; <a href="https://s
 Museum of Art in Manhattan, New York, during the German Renaissance with
  the focus on Albrecht D&uuml;rer.  The sprint juxtaposes Wikipedia data, 
 along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art.  &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/Schmeelk_Final_Qualitative_Sprint.mp4" target="_blank">Video</a> </p>
+create dates of Albrecht D&uuml;rer's works of art.  &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/Schmeelk_Final_Qualitative_Sprint_video1.mp4" target="_blank">Video 1</a>  &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Schmeelk_Final_Qualitative_Sprint/Schmeelk_Final_Qualitative_Sprint_video2.mp4" target="_blank">Video 2</a></p>
 
 	</div>
 
@@ -55,7 +55,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 	<div class="box">
 <h2> Where is D&uuml;rer's In the Met?  </h2>
 <br>
-<p> This visualization is to guide people to Albrecht D&uuml;rer's artworks housed in the Metropolitan Museum of Art in Manhattan, New York. <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/WhereIsDurerInTheMet.pdf"> Art board 1 </a> </p>
+<p> This visualization is to guide people to Albrecht D&uuml;rer's artworks housed in the Metropolitan Museum of Art in Manhattan, New York. </p>
 <br>
 <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour2.pdf" target="_blank">
    <img style="border:0;width:200px;height:400px" src="./dm.jpg" alt="Interactive Story"></a>
@@ -64,7 +64,7 @@ create dates of Albrecht D&uuml;rer's works of art in The Met. <a href="https://
 <p> This is an interactive mobile application for Met visitors and scholars to discover where
 D&uuml;rer art pieces are in the Met as well as a story timeline for Albrecht D&uuml;rer.  
 The sprint juxtaposes D&uuml;rer Wikipedia data, along with The Met public domain images that transpire for the object 
-create dates of Albrecht D&uuml;rer's works of art in The Met.</p>
+create dates of Albrecht D&uuml;rer's works of art in The Met. &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/WhereIsDurerInTheMet.pdf"> Art board 1 </a> &nbsp; <a href="https://schmeelk.github.io/PGDV5200_MajorStudio/Durer_Mobile/DurerTour2.mp4" target="_blank">Video</a></p>
 
 	</div>
 
